[bugfix] fix overlapping blocks and notes

--- a/src/features/blocks/Blocks.css
+++ b/src/features/blocks/Blocks.css
@@ -37,7 +37,6 @@
   /* padding: 10px; */
   /* float: right; */
   right: 0px;
-  position: absolute;
   clear: both; /* used in conjunction with float to move new blocks to new line */
 }
 
